# aulas_de_programacao

Aula-1/Back-End/: BD.sql
Aula-1/Back-End/FastApi/: items.json  main.py  pyproject.toml
Aula-1/Back-End/Python/: main.py
Aula-1/Front-End/Css/: styles.css
Aula-1/Front-End/Html/: index.html
Aula-1/Front-End/Javascript/: main.js
